--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             crossorigin="anonymous" referrerpolicy="no-referrer" />
     
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="./css/output.css">
         <link rel="icon" href="./images/illustrations/name-logo-favicon.svg">
         <title>Aakash Patil</title>
     </head>
@@ -104,16 +103,16 @@
                         </div>
                         <div class="social-list-div">
                             <ul class="social-list">
-                                <li><a class="social-a" href="https://www.linkedin.com/in/aakash-patil-697528237/"><i
+                                <li><a class="social-a" href="https://www.linkedin.com/in/aakash-patil-697528237/" target="_blank"><i
                                             class="fa-brands fa-linkedin-in s-icon"></i></a>
                                 </li>
                                 <li><a class="social-a"
-                                        href="https://profile.indeed.com/?hl=en_IN&co=IN&from=gnav-homepage"><img
+                                        href="https://profile.indeed.com/?hl=en_IN&co=IN&from=gnav-homepage" target="_blank"><img
                                             class="indeed" width="25" height="25"
                                             src="./images/illustrations/indeed1.png" alt=""></a></li>
-                                <li><a class="social-a" href="https://github.com/AakashPatil2002?tab=repositories"><i
+                                <li><a class="social-a" href="https://github.com/Aakash-Patil2002?tab=repositories" target="_blank"><i
                                             class="fa-brands fa-github s-icon"></i></a></li>
-                                <li><a class="social-a" href="mailto:akashnp25274@gmail.com"><i
+                                <li><a class="social-a" href="mailto:akashnp25274@gmail.com" target="_blank"><i
                                             class="fa-regular fa-envelope s-icon"></i></a></li>
                                 <li><a class="social-a" href="https://wa.me/919890215115"><i class="fa-brands fa-whatsapp s-icon"></i></a></li>
                             </ul>
@@ -390,7 +389,7 @@
                         <div class="prj-wrapper">
                             <div class="horizontal-line"></div>
                             <div class="circle"></div>
-                            <a href="https://aakashpatil2002.github.io/CarShowroom/"
+                            <a href="https://aakash-patil2002.github.io/CarShowroom/" target="_blank"
                                 class="flex w-100 position-relative justify-content-center justify-content-sm-start">
                                 <div class="prj-img-block">
                                     <img class="prj-img" src="./images/illustrations/carshowroom.png" alt="Car showroom" />
@@ -434,7 +433,7 @@
                             </div>
                             <div class="d-sm-block odd-line"></div>
                             <div class="circle"></div>
-                            <a href="https://aakashpatil2002.github.io/Hospital/"
+                            <a href="https://aakash-patil2002.github.io/hospital/" target="_blank"
                                 class="order-1 order-md-2 d-flex w-100 position-relative justify-content-center justify-content-sm-start">
                                 <div class="prj-img-block ms-auto">
                                     <img class="prj-img" src="./images/illustrations/Hospital.png"
@@ -446,7 +445,7 @@
                         <div class="prj-wrapper">
                             <div class="horizontal-line"></div>
                             <div class="circle"></div>
-                            <a href="https://aakashpatil2002.github.io/furniture/"
+                            <a href="https://aakash-patil2002.github.io/furniture/" target="_blank"
                                 class="d-flex w-100 position-relative justify-content-center justify-content-sm-start">
                                 <div class="prj-img-block">
                                     <img class="prj-img" src="./images/illustrations/furniture.png" alt="restaurent" />
@@ -488,7 +487,7 @@
                             </div>
                             <div class="d-sm-block odd-line"></div>
                             <div class="circle"></div>
-                            <a href="https://aakashpatil2002.github.io/Strider/"
+                            <a href="https://aakash-patil2002.github.io/strider/" target="_blank"
                                 class="order-1 order-md-2 d-flex w-100 position-relative justify-content-center justify-content-sm-start">
                                 <div class="prj-img-block ms-auto">
                                     <img class="prj-img" src="./images/illustrations/strider.png"
@@ -503,7 +502,7 @@
                         <div class="prj-wrapper">
                             <div class="horizontal-line"></div>
                             <div class="circle"></div>
-                            <a href="https://aakashpatil2002.github.io/Finback/"
+                            <a href="https://aakash-patil2002.github.io/bank/" target="_blank"
                                 class="flex w-100 position-relative justify-content-center justify-content-sm-start">
                                 <div class="prj-img-block">
                                     <img class="prj-img" src="./images/illustrations/bank.png" alt="bank web" />
@@ -543,7 +542,7 @@
                             </div>
                             <div class="d-sm-block odd-line"></div>
                             <div class="circle"></div>
-                            <a href="https://aakashpatil2002.github.io/Restaurent/"
+                            <a href="https://aakash-patil2002.github.io/restaurant/" target="_blank"
                                 class="order-1 order-md-2 d-flex w-100 position-relative justify-content-center justify-content-sm-start">
                                 <div class="prj-img-block ms-auto">
                                     <img class="prj-img" src="./images/illustrations/foodStore.png" alt="furniture web" />
@@ -554,7 +553,7 @@
                         <div class="prj-wrapper">
                             <div class="horizontal-line"></div>
                             <div class="circle"></div>
-                            <a href="https://aakashpatil2002.github.io/gym/"
+                            <a href="https://aakash-patil2002.github.io/gym/" target="_blank"
                                 class="d-flex w-100 position-relative justify-content-center justify-content-sm-start">
                                 <div class="prj-img-block">
                                     <img class="prj-img" src="./images/illustrations/gym.png" alt="Gym web" />
@@ -596,7 +595,7 @@
                             </div>
                             <div class="d-sm-block odd-line"></div>
                             <div class="circle"></div>
-                            <a href="https://aakashpatil2002.github.io/FitnessCenter/"
+                            <a href="https://aakash-patil2002.github.io/fitness-center/" target="_blank"
                                 class="order-1 order-md-2 d-flex w-100 position-relative justify-content-center justify-content-sm-start">
                                 <div class="prj-img-block ms-auto">
                                     <img class="prj-img" src="./images/illustrations/fitnessCenter.png" alt="fitness web" />
@@ -631,7 +630,7 @@
                                                 <p class="prj-para">Task management system with login and signup functionality. Admin can assign tasks to specific employees and
                                                     track task status.
                                                 </p>
-                                                <a href="https://aakashpatil2002.github.io/reactproject" onclick="playIt()"
+                                                <a href="https://aakash-patil2002.github.io/etms/" target="_blank" onclick="playIt()"
                                                     class="color-btn">Visit Live Website<i
                                                         class="fa-solid fa-arrow-up-right-from-square"></i></a>
                                             </div>
@@ -661,7 +660,7 @@
                                                 <h3 class="prj-heading">Cryptoplace</h3>
                                                 <p class="prj-para">Explore CryptoPlace: a secure platform for trading,
                                                     managing, and learning about cryptocurrency investments easily.</p>
-                                                <a href="https://aakashpatil2002.github.io/cryptoplace/" onclick="playIt()"
+                                                <a href="https://aakash-patil2002.github.io/cryptoplace/" target="_blank" onclick="playIt()"
                                                     class="color-btn">Visit Live Website<i
                                                         class="fa-solid fa-arrow-up-right-from-square"></i></a>
                                             </div>
@@ -688,7 +687,7 @@
                                                 <p class="prj-para">Track student progress with detailed analytics,
                                                     personalized insights, and tools for improved learning outcomes.
                                                 </p>
-                                                <a href="https://aakashpatil2002.github.io/student/" onclick="playIt()"
+                                                <a href="https://aakash-patil2002.github.io/student/" target="_blank" onclick="playIt()"
                                                     class="color-btn">Visit Live Website<i
                                                         class="fa-solid fa-arrow-up-right-from-square"></i></a>
                                             </div>
@@ -710,7 +709,7 @@
                                                 <h3 class="prj-heading">Dice Game</h3>
                                                 <p class="prj-para">A dice game is a game where players roll dice to achieve specific outcomes, often combining luck and strategy.
                                                 </p>
-                                                <a href="https://aakashpatil2002.github.io/gameweb/" onclick="playIt()"
+                                                <a href="https://aakash-patil2002.github.io/dicegame/" target="_blank" onclick="playIt()"
                                                     class="color-btn">Visit Live Website<i
                                                         class="fa-solid fa-arrow-up-right-from-square"></i></a>
                                             </div>
@@ -740,7 +739,7 @@
                                                 <p class="prj-para">Stream movies, TV shows, and originals anytime,
                                                     anywhere with a user-friendly Netflix clone platform.
                                                 </p>
-                                                <a href="https://aakashpatil2002.github.io/gameweb/" onclick="playIt()"
+                                                <a href="https://wondrous-pasca-81393a.netlify.app/" target="_blank" onclick="playIt()"
                                                     class="color-btn">Visit Live Website<i
                                                         class="fa-solid fa-arrow-up-right-from-square"></i></a>
                                             </div>
@@ -761,7 +760,7 @@
                                             <div class="">
                                                 <h3 class="prj-heading">Wheather App</h3>
                                                 <p class="prj-para">A Weather App provides real-time weather updates, forecasts, and alerts, helping users plan activities based on current and predicted conditions.</p>
-                                                <a href="https://aakashpatil2002.github.io/Weatherapp/" onclick="playIt()"
+                                                <a href="https://aakash-patil2002.github.io/Weatherapp/" target="_blank" onclick="playIt()"
                                                     class="color-btn">Visit Live Website<i
                                                         class="fa-solid fa-arrow-up-right-from-square"></i></a>
                                             </div>
@@ -780,7 +779,7 @@
                                                 <h3 class="prj-heading">Todo App</h3>
                                                 <p class="prj-para">A To-Do App helps users manage tasks by creating, updating, and tracking them efficiently for better productivity.
                                                 </p>
-                                                <a href="https://aakashpatil2002.github.io/todo/" onclick="playIt()"
+                                                <a href="https://aakash-patil2002.github.io/todo/" target="_blank" onclick="playIt()"
                                                     class="color-btn">Visit Live Website<i
                                                         class="fa-solid fa-arrow-up-right-from-square"></i></a>
                                             </div>
@@ -895,7 +894,7 @@
                     <div class="col-lg-6">
                         <div class="row py-4">
                             <div class="col-6">
-                                <a class="foot-a" href="https://www.linkedin.com/in/aakash-patil-697528237/"><span><i
+                                <a class="foot-a" href="https://www.linkedin.com/in/aakash-patil-697528237/" target="_blank"><span><i
                                             class="fa-brands fa-linkedin-in f-icon"></i></span><span
                                         class="f-img-dis">LinkedIn</span></a>
                                 <a class="foot-a" href="mailto:akashnp25274@gmail.com"><span><i
@@ -906,7 +905,7 @@
                                 <a class="foot-a" href="https://wa.me/919890215115"><span><i
                                             class="fa-brands fa-whatsapp f-icon"></i></span><span
                                         class="f-img-dis">Whatsapp</span></a>
-                                <a class="foot-a" href="https://github.com/AakashPatil2002?tab=repositories"><span><i
+                                <a class="foot-a" href="https://github.com/Aakash-Patil2002?tab=repositories"><span><i
                                             class="fa-brands fa-github f-icon"></i></span><span
                                         class="f-img-dis">Github</span></a>
                             </div>
