--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
                                                 <h3 class="prj-heading">Food Delivary app UI</h3>
                                                 <p class="prj-para">A Food Delivery App connects users with local restaurants, allowing them to browse menus, place orders, and track deliveries conveniently.
                                                 </p>
-                                                <a href="#" onclick="playIt()"
+                                                <a href="https://aakashpatil-food-delivery.netlify.app/" onclick="playIt()"
                                                     class="color-btn">Visit Live Website<i
                                                         class="fa-solid fa-arrow-up-right-from-square"></i></a>
                                             </div>
